--- a/0.5.md
+++ b/0.5.md
@@ -2,25 +2,25 @@
 
 ## go doc
 
-`go doc`命令可以打印附于Go语言程序实体上的文档。我们可以通过把程序实体的标识符作为该命令的参数来达到查看其文档的目的。
+`go doc` 命令可以打印附于Go语言程序实体上的文档。我们可以通过把程序实体的标识符作为该命令的参数来达到查看其文档的目的。
 
-**插播：**所谓Go语言的程序实体，是指变量、常量、函数、结构体以及接口。而程序实体的标识符即是代表它们的名称。标识符又分非限定标识符和限定标识符。其中，限定标识符一般用于表示某个代码包中的程序实体或者某个结构体类型中的方法或字段。例如，标准库代码包`io`中的名为`EOF`的变量用限定标识符表示即`io.EOF`。又例如，如果我有一个`sync.WaitGroup`类型的变量`wg`并且想调用它的`Add`方法，那么可以这样写`wg.Add()`。其中，`wg.Add`就是一个限定标识符，而后面的`()`则代表了调用操作。
+**插播：** 所谓Go语言的程序实体，是指变量、常量、函数、结构体以及接口。而程序实体的标识符即是代表它们的名称。标识符又分非限定标识符和限定标识符。其中，限定标识符一般用于表示某个代码包中的程序实体或者某个结构体类型中的方法或字段。例如，标准库代码包`io`中的名为`EOF`的变量用限定标识符表示即`io.EOF`。又例如，如果我有一个`sync.WaitGroup`类型的变量`wg`并且想调用它的`Add`方法，那么可以这样写`wg.Add()`。其中，`wg.Add`就是一个限定标识符，而后面的`()`则代表了调用操作。
 
-下面说明怎样使用`go doc`命令。先来看一下`go doc`命令可接受的标记。
+下面说明怎样使用 `go doc` 命令。先来看一下 `go doc` 命令可接受的标记。
 
-_表0-5 ```go doc```命令的标记说明_
+_表0-5 `` `go doc` ``命令的标记说明_
 
 标记名称    | 标记描述
 ---------- | -------
--c         | 加入此标记后会使`go doc`命令区分参数中字母的大小写。默认情况下，命令是大小写不敏感的。
--cmd       | 加入此标记后会使`go doc`命令同时打印出`main`包中的可导出的程序实体（其名称的首字母大写）的文档。默认情况下，这部分文档是不会被打印出来的。
--u         | 加入此标记后会使`go doc`命令同时打印出不可导出的程序实体（其名称的首字母小写）的文档。默认情况下，这部分文档是不会被打印出来的。
+-c         | 加入此标记后会使 `go doc` 命令区分参数中字母的大小写。默认情况下，命令是大小写不敏感的。
+-cmd       | 加入此标记后会使 `go doc` 命令同时打印出`main`包中的可导出的程序实体（其名称的首字母大写）的文档。默认情况下，这部分文档是不会被打印出来的。
+-u         | 加入此标记后会使 `go doc` 命令同时打印出不可导出的程序实体（其名称的首字母小写）的文档。默认情况下，这部分文档是不会被打印出来的。
 
 这几个标记的意图都非常简单和明确，大家可以根据实际情况选用。
 
-`go doc`命令可以后跟一个或两个参数。当然，我们也可以不附加任务参数。如果不附加参数，那么`go doc`命令会试图打印出当前目录所代表的代码包的文档及其中的包级程序实体的列表。
+`go doc` 命令可以后跟一个或两个参数。当然，我们也可以不附加任何参数。如果不附加参数，那么 `go doc` 命令会试图打印出当前目录所代表的代码包的文档及其中的包级程序实体的列表。
 
-例如，我要在goc2p项目的`loadgen`代码包所在目录中运行`go doc`命令的话，那么就会是这样：
+例如，我要在goc2p项目的`loadgen`代码包所在目录中运行 `go doc` 命令的话，那么就会是这样：
 
 ```bash
 hc@ubt:~/golang/goc2p/src/loadgen$ go doc
@@ -34,7 +34,7 @@ func NewGenerator(
 	resultCh chan *lib.CallResult) (lib.Generator, error)
 ```
 
-如果你需要指定代码包或程序实体，那么就需要在`go doc`命令后附上参数了。例如，只要我本地的goc2p项目的所在目录存在于GOPATH环境变量中，我就可以在任意目录中敲入`go doc loadgen`。如此得到的输出一定是与上面那个示例一致的。
+如果你需要指定代码包或程序实体，那么就需要在 `go doc` 命令后附上参数了。例如，只要我本地的goc2p项目的所在目录存在于GOPATH环境变量中，我就可以在任意目录中敲入`go doc loadgen`。如此得到的输出一定是与上面那个示例一致的。
 
 看过`loadgen`代码包中源码的读者会知道，其中只有一个可导出的程序实体，即`NewGenerator`函数。这也是上述示例中如此输出的原因。该代码包中的结构体类型`myGenerator`是不可导出，但是我们只需附加`-u`标记便可查看它的文档了：
 
@@ -77,16 +77,16 @@ func (gen *myGenerator) init() error
     初始化载荷发生器。
 ```
 
-注意，结构体类型中的字段的文档是无法被单独打印的。另外，`go doc`命令根据参数查找代码包或程序实体的顺序是：先Go语言根目录（即GOROOT所环境变量指定的那个目录）后工作区目录（即GOPATH环境变量包含的那些目录）。并且，在前者或后者中，`go doc`命令的查找顺序遵循字典序。因此，如果某个工作区目录中的代码包与标准库中的包重名了，那么它是无法被打印出来的。`go doc`命令只会打印出第一个匹配的代码包或程序实体的文档。
+注意，结构体类型中字段的文档是无法被单独打印的。另外， `go doc` 命令根据参数查找代码包或程序实体的顺序是：先Go语言根目录（即GOROOT环境变量指定的那个目录）后工作区目录（即GOPATH环境变量包含的那些目录）。并且，在前者或后者中， `go doc` 命令的查找顺序遵循字典序。因此，如果某个工作区目录中的代码包与标准库中的包重名了，那么它是无法被打印出来的。 `go doc` 命令只会打印出第一个匹配的代码包或程序实体的文档。
 
-我们在前面说过，`go doc`命令还可以接受两个参数。这是一种更加精细的指定代码包或程序实体的方式。一个显著的区别是，如果你想打印标准库代码包`net/http`中的结构体类型`Request`的文档，那么可以这样敲入`go doc`命令：
+我们在前面说过， `go doc` 命令还可以接受两个参数。这是一种更加精细的指定代码包或程序实体的方式。一个显著的区别是，如果你想打印标准库代码包`net/http`中的结构体类型`Request`的文档，那么可以这样敲入 `go doc` 命令：
 
 ```bash
 go doc http.Request
 ```
-注意，这里并没有写入`net/http`代码包的导入路径，而只是写入了其中的最后一个元素`http`。但是如果你把`http.Request`拆成两个参数（即` http Request`）的话，命令程序就会什么也查不到了。因为这与前一种用法的解析方式是不一样的。正确的做法是，当你指定两个参数时，作为第一个参数的代码包名称必须是完整的导入路径，即：在敲入命令`go doc net/http Request`后，你会得到想要的结果。
+注意，这里并没有写入`net/http`代码包的导入路径，而只是写入了其中的最后一个元素`http`。但是如果你把`http.Request`拆成两个参数（即` http Request`）的话，命令程序就会什么也查不到了。因为这与前一种用法的解析方式是不一样的。正确的做法是，当你指定两个参数时，作为第一个参数的代码包名称必须是完整的导入路径，即：在敲入命令 `go doc net/http Request` 后，你会得到想要的结果。
 
-最后，在给定两个参数时，`go doc`会打印出所有匹配的文档，而不是像给定一个参数时那样只打印出第一个匹配的文档。这对于查找只有大小写不同的多个方法（如`New`和`new`）的文档来说非常有用。
+最后，在给定两个参数时， `go doc` 会打印出所有匹配的文档，而不是像给定一个参数时那样只打印出第一个匹配的文档。这对于查找只有大小写不同的多个方法（如`New`和`new`）的文档来说非常有用。
 
 ## godoc
 命令`godoc`是一个很强大的工具，同样用于展示指定代码包的文档。在Go语言的1.5版本中，它是一个内置的标准命令。
@@ -129,7 +129,7 @@ Go语言为程序使用示例代码设立了专有的规则。我们在这里暂
 hc@ubt:~$ godoc -ex net/http FileServer
 ```
 
-注意，我们在使用`godoc`命令时，只能把代码包和程序实体的标识符拆成两个参数。也就是说，`godoc`命令不支持前文所述的`go doc`命令的单参数用法。
+注意，我们在使用`godoc`命令时，只能把代码包和程序实体的标识符拆成两个参数。也就是说，`godoc`命令不支持前文所述的 `go doc` 命令的单参数用法。
 	
 在实际的Go语言环境中，我们可能会遇到一个命令源码文件所产生的可执行文件与代码包重名的情况。比如，这里介绍的标准命令`go`和官方代码包`go`。现在我们要明确的告诉`godoc`命令要查看可执行文件go的文档，我们需要在名称前加入`cmd/`前缀：
 
