--- a/0.7.md
+++ b/0.7.md
@@ -1,12 +1,10 @@
 # go test
 
+`go test` 命令用于对Go语言编写的程序进行测试。这种测试是以代码包为单位的。当然，这还需要测试源码文件的帮助。关于怎样编写并写好Go程序测试代码，我们会在本章的第二节加以详述。在这里，我们只讨论怎样使用命令启动测试。
 
+`go test` 命令会自动测试每一个指定的代码包。当然，前提是指定的代码包中存在测试源码文件。关于测试源码文件方面的知识，在我的图书《Go并发编程实战》中有详细介绍。测试源码文件是名称以“_test.go”为后缀的、内含若干测试函数的源码文件。测试函数一般是以“Test”为名称前缀并有一个类型为“testing.T”的参数声明的函数.
 
-`go test`命令用于对Go语言编写的程序进行测试。这种测试是以代码包为单位的。当然，这还需要测试源码文件的帮助。关于怎样编写并写好Go程序测试代码，我们会在本章的第二节加以详述。在这里，我们只讨论怎样使用命令启动测试。
-
-`go test`命令会自动测试每一个指定的代码包。当然，前提是指定的代码包中存在测试源码文件。关于测试源码文件方面的知识，在我的图书《Go并发编程实战》中有详细介绍。测试源码文件是名称以“_test.go”为后缀的、内含若干测试函数的源码文件。测试函数一般是以“Test”为名称前缀并有一个类型为“testing.T”的参数声明的函数.
-
-现在，我们来测试goc2p项目中的几个代码包。在使用```go test```命令时指定代码包的方式与其他命令无异——使用代码包导入路径。如果需要测试多个代码包，则需要在它们的导入路径之间加入空格以示分隔。示例如下：
+现在，我们来测试goc2p项目中的几个代码包。在使用 `go test` 命令时指定代码包的方式与其他命令无异——使用代码包导入路径。如果需要测试多个代码包，则需要在它们的导入路径之间加入空格以示分隔。示例如下：
 
 ```bash
 hc@ubt:~$ go test basic cnet/ctcp pkgtool
@@ -15,12 +13,12 @@ ok  	cnet/ctcp	2.014s
 ok  	pkgtool	0.014s
 ```
 
-`go test`命令在执行完所有的代码包中的测试文件之后，会以代码包为单位打印出测试概要信息。在上面的示例中，对应三个代码包的三行信息的第一列都是“ok”。这说明它们都通过了测试。每行的第三列显示运行相应测试所用的时间，以秒为单位。我们还可以在代码包目录下运行不加任何参数的运行`go test`命令。其作用和结果与上面的示例是一样的。
+`go test` 命令在执行完所有的代码包中的测试文件之后，会以代码包为单位打印出测试概要信息。在上面的示例中，对应三个代码包的三行信息的第一列都是“ok”，这说明它们都通过了测试。每行的第三列显示运行相应测试所用的时间，以秒为单位。我们还可以在代码包目录下运行不加任何参数的运行 `go test` 命令。其作用和结果与上面的示例是一样的。
 
-另外，我们还可以指定测试源码文件来进行测试。这样的话，`go test`命令只会执行指定文件中的测试，像这样：
+另外，我们还可以指定测试源码文件来进行测试。这样的话， `go test` 命令只会执行指定文件中的测试，像这样：
 
 ```bash
-	hc@ubt:~/golang/goc2p/src/pkgtool$ go test envir_test.go
+hc@ubt:~/golang/goc2p/src/pkgtool$ go test envir_test.go
 # command-line-arguments
 ./envir_test.go:25: undefined: GetGoroot
 ./envir_test.go:40: undefined: GetAllGopath
@@ -55,11 +53,11 @@ FAIL    pkgtool 0.009s
 
 **关于标记**
 
-`go test`命令的标记处理部分是庞大且繁杂的，以至于使Go语言的开发者们不得不把这一部分的逻辑从`go test`命令程序主体中分离出来并建立单独的源码文件。因为`go test`命令中包含了编译动作，所以它可以接受可用于`go build`命令的所有标记。另外，它还有很多特有的标记。这些标记的用于控制命令本身的动作，有的用于控制和设置测试的过程和环境，还有的用于生成更详细的测试结果和统计信息。
+`go test` 命令的标记处理部分是庞大且繁杂的，以至于使Go语言的开发者们不得不把这一部分的逻辑从 `go test` 命令程序主体中分离出来并建立单独的源码文件。因为 `go test` 命令中包含了编译动作，所以它可以接受可用于 `go build` 命令的所有标记。另外，它还有很多特有的标记。这些标记有的用于控制命令本身的动作，有的用于控制和设置测试的过程和环境，还有的用于生成更详细的测试结果和统计信息。
 
-可用于`go test`命令的几个比较常用的标记是`-c`、`-i`和`-o`。这两个就是用于控制`go test`命令本身的动作的标记。详见下表。
+可用于 `go test` 命令的几个比较常用的标记是`-c`、`-i`和`-o`。这两个就是用于控制 `go test` 命令本身的动作的标记。详见下表。
 
-表0-6 ```go test```命令的标记说明
+表0-6 `` `go test` ``命令的标记说明
 
 标记名称      | 标记描述
 ------------ | -------------
@@ -67,6 +65,6 @@ FAIL    pkgtool 0.009s
 -i           |  安装/重新安装运行测试所需的依赖包，但不编译和运行测试代码。
 -o           | 指定用于运行测试的可执行文件的名称。追加该标记不会影响测试代码的运行，除非同时追加了标记`-c`或`-i`。
 
-上述这几个标记可以搭配使用。搭配使用的目的可以是让`go test`命令既安装依赖包又编译测试代码，但不运行测试。也就是说，让命令程序跑一遍运行测试之前的所有流程。这可以测试一下测试过程。注意，在加入`-c`标记后，命令程序会把用于运行测试的可执行文件存放到当前目录下。
+上述这几个标记可以搭配使用。搭配使用的目的可以是让 `go test` 命令既安装依赖包又编译测试代码，但不运行测试。也就是说，让命令程序跑一遍运行测试之前的所有流程。这可以测试一下测试过程。注意，在加入`-c`标记后，命令程序会把用于运行测试的可执行文件存放到当前目录下。
 
-除此之外，`go test`命令还有很多功效各异的标记。但是由于这些标记的复杂性，我们需要结合测试源码文件进行详细的讲解。所以我们在这里略过不讲。如果读者想了解相关详情，请参看《Go并发编程实战》的第5章。
+除此之外， `go test` 命令还有很多功效各异的标记。但是由于这些标记的复杂性，我们需要结合测试源码文件进行详细的讲解。所以我们在这里略过不讲。如果读者想了解相关详情，请参看《Go并发编程实战》的第5章。
