--- a/0.8.md
+++ b/0.8.md
@@ -1,7 +1,6 @@
 # go list
 
- 
-`go list`命令的作用是列出指定的代码包的信息。与其他命令相同，我们需要以代码包导入路径的方式给定代码包。被给定的代码包可以有多个。这些代码包对应的目录中必须直接保存有Go语言源码文件，其子目录中的文件不算在内。否则，代码包将被看做是不完整的。现在我们来试用一下：
+`go list` 命令的作用是列出指定代码包的信息。与其他命令相同，我们需要以代码包导入路径的方式给定代码包。被给定的代码包可以有多个。这些代码包对应的目录中必须直接保存有Go语言源码文件，其子目录中的文件不算在内。否则，代码包将被看做是不完整的。现在我们来试用一下：
 
 ```bash
 hc@ubt:~$ go list cnet/ctcp pkgtool
@@ -17,7 +16,7 @@ can't load package: package cnet: no buildable Go source files in /home/hc/golan
 pkgtool
 ```
 
-这时，`go list`命令报告了一个错误——代码包`cnet`对应的目录下没有Go源码文件。但是命令还是把代码包pkgtool的导入路径打印出来了。然而，当我们在执行`go list`命令并加入标记`-e`时，即使参数中包含有不完整的代码包，命令也不会提示错误。示例如下：
+这时，`go list` 命令报告了一个错误——代码包`cnet`对应的目录下没有Go源码文件。但是命令还是把代码包pkgtool的导入路径打印出来了。然而，当我们在执行 `go list` 命令并加入标记`-e`时，即使参数中包含有不完整的代码包，命令也不会提示错误。示例如下：
 
 ```bash
 hc@ubt:~$ go list -e cnet pkgtool
@@ -53,7 +52,7 @@ hc@ubt:~$ go list -e -json cnet
 
 实际上，在从这个代码包结构体实例到JSON格式文本的转换过程中，所有的值为其类型的空值的字段都已经被忽略了。
 
-现在我们使用带`-json`标记的`go list`命令列出代码包`cnet/ctcp`的信息：
+现在我们使用带`-json`标记的 `go list` 命令列出代码包`cnet/ctcp`的信息：
 
 ```bash
 hc@ubt:~$ go list -json cnet/ctcp
@@ -195,9 +194,9 @@ hc@ubt:~$ go list -f {{.ImportPath}} cnet/ctcp
 cnet/ctcp
 ```
 
-实际上，`-f`标记的默认值就是`{{.ImportPath}}`。这也正是我们在使用不加任何标记的`go list`命令时依然能看到指定代码包的导入路径的原因了。
+实际上，`-f`标记的默认值就是`{{.ImportPath}}`。这也正是我们在使用不加任何标记的 `go list` 命令时依然能看到指定代码包的导入路径的原因了。
 
-标记`-f`的值需要满足标准库的代码包``text/template`中定义的语法。比如，`{{.S}}`代表根结构体的`S`字段的值。在`go list`命令的场景下，这个根结构体就是指定的代码包所对应的结构体。如果`S`字段的值也是一个结构体的话，那么`{{.S.F}}`就代表根结构体的`S`字段的值中的`F`字段的值。如果我们要查看`cnet/ctcp`包中的命令源码文件和库源码文件的列表，可以这样使用`-f`标记：
+标记`-f`的值需要满足标准库的代码包 `text/template` 中定义的语法。比如，`{{.S}}`代表根结构体的`S`字段的值。在 `go list` 命令的场景下，这个根结构体就是指定的代码包所对应的结构体。如果`S`字段的值也是一个结构体的话，那么`{{.S.F}}`就代表根结构体的`S`字段的值中的`F`字段的值。如果我们要查看`cnet/ctcp`包中的命令源码文件和库源码文件的列表，可以这样使用`-f`标记：
 
 ```bash
 hc@ubt:~$ go list -f {{.GoFiles}} cnet/ctcp
@@ -211,7 +210,7 @@ hc@ubt:~$ go list -e -f {{.Error.Err}} cnet
 no buildable Go source files in /home/hc/golang/goc2p/src/cnet
 ```
 
-我们还可以利用代码包`text/template`中定义的强大语法让`go list`命令输出定制化更高的代码包信息。比如：
+我们还可以利用代码包`text/template`中定义的强大语法让 `go list` 命令输出定制化更高的代码包信息。比如：
 
 ```bash
 hc@ubt:~$ go list -e -f 'The package {{.ImportPath}} is {{if .Incomplete}}incomplete!{{else}}complete.{{end}}' cnet
@@ -224,6 +223,6 @@ The imports of package cnet/ctcp is [bufio, bytes, errors, logging, net, sync, t
 
 其中，`join`是命令程序在`text/template`包原有语法之上自定义的语法，在底层使用标准库代码包`strings`中的`Join`函数。关于更多的语法规则，请读者查看代码包`text/template`的相关文档。
 
-另外，`-tags`标记也可以被`go list`接受。它与我们在讲`go build`命令时提到的`-tags`标记是一致的。读者可以查看代码包`go/build``的文档以了解细节。 
+另外，`-tags`标记也可以被 `go list` 接受。它与我们在讲 `go build` 命令时提到的`-tags`标记是一致的。读者可以查看代码包 `go/build` 的文档以了解细节。 
 
-`go list`命令很有用。它可以为我们提供指定代码包的更深层次的信息。这些信息往往是我们无法从源码文件中直观看到的。
+`go list` 命令很有用。它可以为我们提供指定代码包的更深层次的信息。这些信息往往是我们无法从源码文件中直观看到的。
