--- a/0.9.md
+++ b/0.9.md
@@ -1,9 +1,8 @@
-### 0.9 go fmt与gofmt
-
+# 0.9 go fmt与gofmt
  
-`go fmt`命令会按照Go语言代码规范格式化指定代码包中的所有Go语言源码文件的代码，所有Go语言源码文件即包括命令源码文件、库源码文件和测试源码文件。注意，当代码包还有子代码包时，子代码包中的Go语言源码文件是不包含在内的。也就是说，`go fmt`命令只会格式化被直接保存在指定代码包对应目录下的Go语言源码文件。
+`go fmt` 命令会按照Go语言代码规范格式化指定代码包中的所有Go语言源码文件的代码，所有Go语言源码文件指命令源码文件、库源码文件和测试源码文件。注意，当代码包还有子代码包时，子代码包中的Go语言源码文件是不包含在内的。也就是说， `go fmt` 命令只会格式化被直接保存在指定代码包对应目录下的Go语言源码文件。
 
-与`go doc`命令和`godoc`命令的关系类似，`go fmt`命令是`gofmt`命令的简单封装。`go fmt`命令本身可以接受两个标记。标记`-n`可以让命令程序仅打印出内部使用的`gofmt`命令及其标记和参数而不真正执行它。标记`-x`则会使命令程序既打印又执行这个命令。在`go fmt`命令程序内部，会在其调用的`gofmt`命令后面加上标记`-l`和`-w`，并以指定代码包中的所有Go语言源码文件的路径作为参数，就像这样：
+与`go doc`命令和`godoc`命令的关系类似， `go fmt` 命令是`gofmt`命令的简单封装。 `go fmt` 命令本身可以接受两个标记。标记`-n`可以让命令程序仅打印出内部使用的`gofmt`命令及其标记和参数而不真正执行它。标记`-x`则会使命令程序既打印又执行这个命令。在 `go fmt` 命令程序内部，会在其调用的`gofmt`命令后面加上标记`-l`和`-w`，并以指定代码包中的所有Go语言源码文件的路径作为参数，就像这样：
 
 ```bash
 hc@ubt:~$ go fmt -n pkgtool
@@ -12,7 +11,7 @@ gofmt -l -w golang/goc2p/src/pkgtool/envir.go golang/goc2p/src pkgtoolenvir_test
 
 注意，作为`gofmt`命令参数的Go语言源码文件的路径是相对的，而不是绝对的。不过这只是为了让参数看起来更短一些而已。所以，当我们直接执行`gofmt`命令的时候，使用源码文件的绝对路径作为参数也是没有问题的。实际上，任何Go源码文件或包含有Go语言源码文件的目录的相对路径或绝对路径都可以作为`gofmt`命令的参数。当使用包含有Go语言源码文件的目录的绝对路径或相对路径作为参数时，`gofmt`命令会把在这个目录下的Go语言源码文件作为目标源码文件。
 
-`go fmt`命令程序内部在执行`gofmt`命令时加入的标记是固定的。如果我们想使用与之不同的标记集合就必须直接使用`gofmt`命令了。现在我们来看一下`gofmt`命令可接受的所有标记。如下表。
+`go fmt` 命令程序内部在执行`gofmt`命令时加入的标记是固定的。如果我们想使用与之不同的标记集合就必须直接使用`gofmt`命令了。现在我们来看一下`gofmt`命令可接受的所有标记。如下表。
 
 _表0-13 `gofmt`命令的标记说明_
 
@@ -26,7 +25,7 @@ _表0-13 `gofmt`命令的标记说明_
 -s           | 简化文件中的代码。
 -w           | 把改写后的内容直接写入到文件中，而不是作为结果打印到标准输出。
 
-看过上表中的信息，我们就很容易理解`go fmt`命令的行为了。因为它在内部执行了`gofmt`命令，并加入了标记`-l`和`-w`。这会使命令程序打印需要改写的文件的绝对路径到标准输出，并且直接把格式化后的内容写入到原始文件中。在默认情况下，`gofmt`命令会把格式化后的内容直接打印到标准输出上。
+看过上表中的信息，我们就很容易理解 `go fmt` 命令的行为了。因为它在内部执行了`gofmt`命令，并加入了标记`-l`和`-w`。这会使命令程序打印需要改写的文件的绝对路径到标准输出，并且直接把格式化后的内容写入到原始文件中。在默认情况下，`gofmt`命令会把格式化后的内容直接打印到标准输出上。
 
 实际上，命令程序会把目标源码文件中的内容解析成抽象语法树。当在解析过程中发现语法错误时，命令程序就会显示错误提示信息并退出。在默认情况下，目标源码文件中的语法错误不会全部被显示出来。我们可以加入标记```-e```以使命令程序打印出全部错误到标准输出。
 
@@ -68,11 +67,11 @@ _表0-13 `gofmt`命令的标记说明_
 
 这些操作基本上都是出于尽量使用Go语言的语法糖已达到减少代码量的目的。我们在编写Go语言代码的时候应该直接使用这些语法糖而不应该依赖使用`gofmt`命令来简化。这里所说的Go语言的语法糖，我们在第3章中已经有所介绍。
 
-我们在本小节中详细介绍了`go fmt`命令和`gofmt`命令。下面我们再汇总一下这两个命令可以为我们做的事情。如下表。
+我们在本小节中详细介绍了 `go fmt` 命令和`gofmt`命令。下面我们再汇总一下这两个命令可以为我们做的事情。如下表。
 
-_表0-14 `go fmt`命令和`gofmt`命令的功能_
+_表0-14  `go fmt` 命令和`gofmt`命令的功能_
 
-功能                 | `go fmt`命令 | `gofmt`命令
+功能                 |  `go fmt` 命令 | `gofmt`命令
 -------------------- | ----------- | -----------
 格式化代码            | √           | √
 列出不规范的源码文件    | √           | √
