--- a/0.1.md
+++ b/0.1.md
@@ -1,26 +1,25 @@
 # go build
 
- 
-`go build`命令用于编译我们指定的源码文件或代码包以及它们的依赖包。
+`go build` 命令用于编译我们指定的源码文件或代码包以及它们的依赖包。
 
-例如，如果我们在执行`go build`命令时不后跟任何代码包，那么命令将试图编译当前目录所对应的代码包。例如，我们想编译goc2p项目的代码包`logging`。其中一个方法是进入`logging`目录并直接执行该命令：
+例如，如果我们在执行 `go build` 命令时不后跟任何代码包，那么命令将试图编译当前目录所对应的代码包。例如，我们想编译goc2p项目的代码包`logging`。其中一个方法是进入`logging`目录并直接执行该命令：
 
 ```bash
 hc@ubt:~/golang/goc2p/src/logging$ go build
 ```
 
-因为在代码包`logging`中只有库源码文件和测试源码文件，所以在执行`go build`命令之后不会在当前目录和goc2p项目的pkg目录中产生任何文件。
+因为在代码包`logging`中只有库源码文件和测试源码文件，所以在执行 `go build` 命令之后不会在当前目录和goc2p项目的pkg目录中产生任何文件。
 
-**插播：**Go语言的源码文件有三大类，即：命令源码文件、库源码文件和测试源码文件。他们的功用各不相同，而写法也各有各的特点。命令源码文件总是作为可执行的程序的入口。库源码文件一般用于集中放置各种待被使用的程序实体（全局常量、全局变量、接口、结构体、函数等等）。而测试源码文件主要用于对前两种源码文件中的程序实体的功能和性能进行测试。另外，后者也可以用于展现前两者中程序的使用方法。
+**插播：** Go语言的源码文件有三大类，即：命令源码文件、库源码文件和测试源码文件。他们的功用各不相同，而写法也各有各的特点。命令源码文件总是作为可执行程序的入口。库源码文件一般用于集中放置各种待被使用的程序实体（全局常量、全局变量、接口、结构体、函数等等）。而测试源码文件主要用于对前两种源码文件中的程序实体的功能和性能进行测试。另外，后者也可以用于展现前两者中程序的使用方法。
 
 另外一种编译`logging`包的方法是：
 
 ```bash
 hc@ubt:~/golang/goc2p/src$ go build logging
 ```
-在这里，我们把代码包`logging`的导入路径作为参数传递给`go build`命令。另一个例子：如果我们要编译代码包`cnet/ctcp`，只需要在任意目录下执行命令`go build cnet/ctcp`即可。
+在这里，我们把代码包`logging`的导入路径作为参数传递给 `go build` 命令。另一个例子：如果我们要编译代码包`cnet/ctcp`，只需要在任意目录下执行命令 `go build cnet/ctcp` 即可。
 
-**插播：**之所以这样的编译方法可以正常执行，是因为我们已经在环境变量`GOPATH`中加入了goc2p项目的根目录（即`~/golang/goc2p/`）。这时，goc2p项目的根目录就成为了一个工作区目录。只有这样，Go语言才能正确识别我们提供的goc2p项目中某个代码包的导入路径。而代码包的导入路径是指，相对于Go语言自身的源码目录（即`$GOROOT/src`）或我们在环境变量`GOPATH`中指定的某个目录的`src`子目录下的子路径。例如，这里的代码包`logging`的绝对路径是`~/golang/goc2p/src/logging`。而不论goc2p项目的根文件夹被放在哪儿，`logging`包的导入路径都是`logging`。显而易见，我们在称呼一个代码包的时候总是以其导入路径作为其称谓。
+**插播：** 之所以这样的编译方法可以正常执行，是因为我们已经在环境变量`GOPATH`中加入了goc2p项目的根目录（即`~/golang/goc2p/`）。这时，goc2p项目的根目录就成为了一个工作区目录。只有这样，Go语言才能正确识别我们提供的goc2p项目中某个代码包的导入路径。而代码包的导入路径是指，相对于Go语言自身的源码目录（即`$GOROOT/src`）或我们在环境变量`GOPATH`中指定的某个目录的`src`子目录下的子路径。例如，这里的代码包`logging`的绝对路径是`~/golang/goc2p/src/logging`。而不论goc2p项目的根文件夹被放在哪儿，`logging`包的导入路径都是`logging`。显而易见，我们在称呼一个代码包的时候总是以其导入路径作为其称谓。
 
 言归正传，除了上面的简单用法，我们还可以同时编译多个Go源码文件:
 
@@ -28,11 +27,11 @@ hc@ubt:~/golang/goc2p/src$ go build logging
 hc@ubt:~/golang/goc2p/src$ go build logging/base.go logging/console_logger.go logging/log_manager.go logging/tag.go
 ```
 
-但是，使用这种方法会有一个限制。作为参数的多个Go源码文件必须在同一个目录中。也就是说，如果我们想用这种方法既编译`logging`包又编译`basic`包是不可能的。不过别担心，在需要的时候，那些被编译目标依赖的代码包会被`go build`命令自动的编译。例如，如果有一个导入路径为`app`的代码包，同时依赖了`logging`包和`basic`包。那么在执行`go build app`的时候，该命令就会自动的在编译`app`包之前去检查`logging`包和`basic`包的编译状态。如果发现它们的编译结果文件不是最新的，那么该命令就会先去的编译这两个代码包，然后再编译`app`包。
+但是，使用这种方法会有一个限制。作为参数的多个Go源码文件必须在同一个目录中。也就是说，如果我们想用这种方法既编译`logging`包又编译`basic`包是不可能的。不过别担心，在需要的时候，那些被编译目标依赖的代码包会被 `go build` 命令自动的编译。例如，如果有一个导入路径为`app`的代码包，同时依赖了`logging`包和`basic`包。那么在执行 `go build app` 的时候，该命令就会自动的在编译`app`包之前去检查`logging`包和`basic`包的编译状态。如果发现它们的编译结果文件不是最新的，那么该命令就会先去的编译这两个代码包，然后再编译`app`包。
 
-注意，`go build`命令在编译只包含库源码文件的代码包（或者同时编译多个代码包）时，只会做检查性的编译，而不会输出任何结果文件。
+注意，`go build` 命令在编译只包含库源码文件的代码包（或者同时编译多个代码包）时，只会做检查性的编译，而不会输出任何结果文件。
 
-另外，`go build`命令既不能编译包含多个命令源码文件的代码包，也不能同时编译多个命令源码文件。因为，如果把多个命令源码文件作为一个整体看待，那么每个文件中的main函数就属于重名函数，在编译时会抛出重复定义错误。假如，在goc2p项目的代码包`cmd`（此代码包仅用于示例目的，并不会永久存在于该项目中）中包含有两个命令源码文件showds.go和initpkg_demo.go，那么我们在使用`go build`命令同时编译它们时就会失败。示例如下：
+另外，`go build` 命令既不能编译包含多个命令源码文件的代码包，也不能同时编译多个命令源码文件。因为，如果把多个命令源码文件作为一个整体看待，那么每个文件中的main函数就属于重名函数，在编译时会抛出重复定义错误。假如，在goc2p项目的代码包`cmd`（此代码包仅用于示例目的，并不会永久存在于该项目中）中包含有两个命令源码文件showds.go和initpkg_demo.go，那么我们在使用 `go build` 命令同时编译它们时就会失败。示例如下：
 
 ```bash
 hc@ubt:~/golang/goc2p/src/cmd$ go build showds.go initpkg_demo.go
@@ -41,11 +40,11 @@ hc@ubt:~/golang/goc2p/src/cmd$ go build showds.go initpkg_demo.go
         previous declaration at ./showds.go:56
 ```
 
-请注意上面示例中的`command-line-arguments`。在这个位置上应该显示的是作为编译目标的源码文件所属的代码包的导入路径。但是，这里显示的并不是它们所属的代码包的导入路径`cmd`。这是因为，命令程序在分析参数的时候如果发现第一个参数是Go源码文件而不是代码包，则会在内部生成一个虚拟代码包。这个虚拟代码包的导入路径和名称都会是`command-line-arguments`。在其他基于编译流程的命令程序中也有与之一致的操作，比如`go install`命令和`go run`命令。
+请注意上面示例中的`command-line-arguments`。在这个位置上应该显示的是作为编译目标的源码文件所属的代码包的导入路径。但是，这里显示的并不是它们所属的代码包的导入路径`cmd`。这是因为，命令程序在分析参数的时候如果发现第一个参数是Go源码文件而不是代码包，则会在内部生成一个虚拟代码包。这个虚拟代码包的导入路径和名称都会是`command-line-arguments`。在其他基于编译流程的命令程序中也有与之一致的操作，比如 `go install` 命令和 `go run` 命令。
 
 另一方面，如果我们编译的多个属于`main`包的源码文件中没有`main`函数的声明，那么就会使编译器立即报出“未定义`main`函数声明”的错误并中止编译。换句话说，在我们同时编译多个`main`包的源码文件时，要保证其中有且仅有一个`main`函数声明，否则编译是无法成功的。
 
-现在我们使用`go build`命令编译单一命令源码文件。我们在执行命令时加入一个标记`-v`。这个标记的意义在于可以使命令把执行过程中构建的包名打印出来。我们会在稍后对这个标记进行详细说明。现在我们先来看一个示例：
+现在我们使用 `go build` 命令编译单一命令源码文件。我们在执行命令时加入一个标记`-v`。这个标记的意义在于可以使命令把执行过程中构建的包名打印出来。我们会在稍后对这个标记进行详细说明。现在我们先来看一个示例：
 
 ```bash
 hc@ubt:~/golang/goc2p/src/basic/pkginit$ ls
@@ -56,9 +55,7 @@ hc@ubt:~/golang/goc2p/src/basic/pkginit$ ls
 initpkg_demo  initpkg_demo.go
 ```
 
-我们在执行命令`go build -v initpkg_demo.go`之后被打印出的`command-line-arguments`”`就是命令程序为命令源码文件initpkg_demo.go生成的虚拟代码包的包名。顺带说一句，
-
-命令`go build`会把编译命令源码文件后生成的结果文件存放到执行该命令时所在的目录下。这个所说的结果文件就是与命令源码文件对应的可执行文件。它的名称会与命令源码文件的主文件名相同。
+我们在执行命令 `go build -v initpkg_demo.go` 之后被打印出的`command-line-arguments`就是命令程序为命令源码文件 `initpkg_demo.go` 生成的虚拟代码包的包名。顺带说一句，命令 `go build` 会把编译命令源码文件后生成的结果文件存放到执行该命令时所在的目录下。这里所说的结果文件就是与命令源码文件对应的可执行文件，该文件名与命令源码文件的主文件名相同。
 
 顺便说一下，如果我们有多个声明为属于`main`包的源码文件，且其中只有一个文件声明了`main`函数的话，那么是可以使用`go build`命令同时编译它们的。在这种情况下，不包含`main`函数声明的那几个源码文件会被视为库源码文件（理所当然）。如此编译之后的结果文件的名称将会与我们指定的编译目标中最左边的那个源码文件的主文件名相同。
 
@@ -70,17 +67,17 @@ hc@ubt:~/golang/goc2p/src/basic/pkginit$ ls
 initpkg    initpkg_demo.go
 ```
 
-使用`-o`标记可以指定输出文件（在这个示例中指的是可执行文件）的名称。它是最常用的一个`go build`命令标记。但需要注意的是，当使用标记`-o`的时候，不能同时对多个代码包进行编译。
+使用`-o`标记可以指定输出文件（在这个示例中指的是可执行文件）的名称。它是最常用的一个 `go build` 命令标记。但需要注意的是，当使用标记`-o`的时候，不能同时对多个代码包进行编译。
 
-标记`-i`会使`go build`命令安装那些编译目标依赖的且还未被安装的代码包。这里的安装意味着产生与代码包对应的归档文件，并将其放置到当前工作区目录的`pkg`子目录的相应子目录中。在默认情况下，这些代码包是不会被安装的。
+标记`-i`会使 `go build` 命令安装那些编译目标依赖的且还未被安装的代码包。这里的安装意味着产生与代码包对应的归档文件，并将其放置到当前工作区目录的`pkg`子目录的相应子目录中。在默认情况下，这些代码包是不会被安装的。
 
-除此之外，还有一些标记不但受到`go build`命令的支持，而且对于后面会提到的`go install`、`go run`、`go test`等命令同样是有效的。下表列出了其中比较常用的标记。
+除此之外，还有一些标记不但受到 `go build` 命令的支持，而且对于后面会提到的` go install`、`go run`、`go test` 等命令同样是有效的。下表列出了其中比较常用的标记。
 
-_表0-1 `go build`命令的常用标记说明_
+_表0-1 `` `go build` `` 命令的常用标记说明_
 
 标记名称      | 标记描述
 ------------ | -------------
--a           | 强行对所有涉及到的代码包（包含标准库中的代码包）进行重新构建，即使它们已经是最新的了。
+-a           | 强制对所有涉及到的代码包（包含标准库中的代码包）进行重新构建，即使它们已经是最新的了。
 -n           | 打印编译期间所用到的其它命令，但是并不真正执行它们。
 -p n         | 指定编译过程中执行各任务的并行数量（确切地说应该是并发数量）。在默认情况下，该数量等于CPU的逻辑核数。但是在`darwin/arm`平台（即iPhone和iPad所用的平台）下，该数量默认是`1`。
 -race        | 开启竞态条件的检测。不过此标记目前仅在`linux/amd64`、`freebsd/amd64`、`darwin/amd64`和`windows/amd64`平台下受到支持。
@@ -98,7 +95,7 @@ WORK=/tmp/go-build888760008
 logging
 ```
 
-上面命令的结果输出的第一行是为了编译`logging`包，Go创建的一个临时工作目录，这个目录被创建到了Linux的临时目录下。输出的第二行是对标记`-v`的响应。这意味着此次命令执行时仅编译了`logging`包。关于临时工作目录的用途和内容，我们会在讲解`go run`命令和`go test`命令的时候详细说明。
+上面命令的结果输出的第一行是为了编译`logging`包，Go创建的一个临时工作目录，这个目录被创建到了Linux的临时目录下。输出的第二行是对标记`-v`的响应。这意味着此次命令执行时仅编译了`logging`包。关于临时工作目录的用途和内容，我们会在讲解 `go run` 命令和 `go test` 命令的时候详细说明。
 
 现在我们再来看看如果强制重新编译会涉及到哪些代码包：
 
@@ -128,11 +125,11 @@ logging
 
 从代码包编译的角度来说，如果代码包A依赖代码包B，则称代码包B是代码包A的依赖代码包（以下简称依赖包），代码包A是代码包B的触发代码包（以下简称触发包）。
 
-`go build`命令在执行时，编译程序会先查找目标代码包的所有依赖包，以及这些依赖包的依赖包，直至找到最深层的依赖包为止。在此过程中，如果发现有循环依赖的情况，编译程序就会输出错误信息并立即退出。此过程完成之后，所有的依赖关系也就形成了一棵含有重复元素的依赖树。对于依赖树中的一个节点（代码包）来说，它的直接分支节点（前者的依赖包），是按照代码包导入路径的字典序从左到右排列的。最左边的分支节点会最先被编译。编译程序会依此设定每个代码包的编译优先级。
+`go build` 命令在执行时，编译程序会先查找目标代码包的所有依赖包，以及这些依赖包的依赖包，直至找到最深层的依赖包为止。在此过程中，如果发现有循环依赖的情况，编译程序就会输出错误信息并立即退出。此过程完成之后，所有的依赖关系也就形成了一棵含有重复元素的依赖树。对于依赖树中的一个节点（代码包）来说，它的直接分支节点（前者的依赖包），是按照代码包导入路径的字典序从左到右排列的。最左边的分支节点会最先被编译。编译程序会依此设定每个代码包的编译优先级。
 
-执行`go build`命令的计算机如果拥有多个逻辑CPU核心，那么编译代码包的顺序可能会存在一些不确定性。但是，它一定会满足这样的约束条件：`依赖代码包 -> 当前代码包 -> 触发代码包`。
+执行 `go build` 命令的计算机如果拥有多个逻辑CPU核心，那么编译代码包的顺序可能会存在一些不确定性。但是，它一定会满足这样的约束条件：`依赖代码包 -> 当前代码包 -> 触发代码包`。
 
-标记`-p n`可以限制编译过程中任务执行的并发数量，`n`默认为当前计算机的CPU逻辑核数。如果在执行`go build`命令时加入标记`-p 1`，那么就可以保证代码包编译顺序严格按照预先设定好的优先级进行。现在我们再来编译`logging`包：
+标记`-p n`可以限制编译过程中任务执行的并发数量，`n`默认为当前计算机的CPU逻辑核数。如果在执行 `go build` 命令时加入标记`-p 1`，那么就可以保证代码包编译顺序严格按照预先设定好的优先级进行。现在我们再来编译`logging`包：
 
 ```bash
 hc@ubt:~/golang/goc2p/src$ go build -a -v -work -p 1 logging
