--- a/0.1.md
+++ b/0.1.md
@@ -56,7 +56,7 @@ hc@ubt:~/golang/goc2p/src/basic/pkginit$ ls
 initpkg_demo  initpkg_demo.go
 ```
 
-我们在执行命令`go build -v initpkg_demo.go`之后被打印出的`command-line-arguments`”`就是命令程序为命令源码文件initpkg_demo.go生成的虚拟代码包的包名。顺带说一句，
+我们在执行命令`go build -v initpkg_demo.go`之后被打印出的`command-line-arguments`就是命令程序为命令源码文件initpkg_demo.go生成的虚拟代码包的包名。顺带说一句，
 
 命令`go build`会把编译命令源码文件后生成的结果文件存放到执行该命令时所在的目录下。这个所说的结果文件就是与命令源码文件对应的可执行文件。它的名称会与命令源码文件的主文件名相同。
 
