--- a/0.1.md
+++ b/0.1.md
@@ -172,7 +172,7 @@ logging
 
 + `-compiler`
 
-此标记用于指定当前使用的编译器的名称。其值可以为`gc`或`gccgo`。其中，gc编译器即为Go语言自带的编辑器，而gccgo编译器则为GCC提供的Go语言编译器。而GCC则是GNU项目出品的编译器套件。GNU是一个众所周知的自由软件项目。在开源软件界不应该有人不知道它。好吧，如果你确实不知道它，赶紧去google吧。
+此标记用于指定当前使用的编译器的名称。其值可以为`gc`或`gccgo`。其中，gc编译器即为Go语言自带的编译器，而gccgo编译器则为GCC提供的Go语言编译器。而GCC则是GNU项目出品的编译器套件。GNU是一个众所周知的自由软件项目。在开源软件界不应该有人不知道它。好吧，如果你确实不知道它，赶紧去google吧。
 
 + `-gccgoflags`
 
